build/testuserdir/var/cache/index/s30/errors/1/tests/color/tests/manual/color-brightness-selector.html.warn
WARNING:7:Unexpected character(s) "150" found
